<resources>
    <string name="app_name">serviceflight</string>

    <!-- ====================================================== -->
    <string name="sortBy">مرتب سازی لیست بر اساس ؟</string>
    <string name="sortByTimeTitleSoonMorning">بامداد</string>
    <string name="sortByTimeTitleMorning">صبح</string>
    <string name="sortByTimeTitleNoon">ظهر</string>
    <string name="sortByTimeTitleAfternoon">بعدازظهر</string>
    <string name="sortByTimeTitleEvening">شب</string>

    <string name="sortByTimeValueSoonMorning">00:00 تا 06:59</string>
    <string name="sortByTimeValueMorning">07:00 تا 10:59</string>
    <string name="sortByTimeValueNoon">11:00 تا 15:59</string>
    <string name="sortByTimeValueAfternoon">16:00 تا 19:59</string>
    <string name="sortByTimeValueEvening">20:00 تا 23:59</string>

    <string name="sortAndFilter">مرتب سازی و فیلتر</string>
    <string name="sortByPriceTitle">محدوده قیمت :</string>
    <string name="typeFlight">نوع پرواز</string>
    <string name="timeTakeOff">ساعت حرکت</string>
    <string name="timeLanding">ساعت رسیدن</string>
    <string name="airline">ایرلاین</string>

    <string name="msgErrorNoFlightByFilter">پروازی با فیلتر های مورد نظر شما وجود ندارد</string>
    <string name="msgErrorEqualFromPlaceWithToPlace">مبدا و مقصد نباید یکی باشد </string>
    <string name="msgErrorInternetConnection">خطا در ارتباط با اینترنت</string>
    <string name="msgErrorNoFlight">پروازی با این اطلاعات وجود ندارد</string>
    <string name="msgErrorServer">خطا در دریافت اطلاعات</string>
    <string name="msgErrorPayment">خطا در دسترسی به اطلاعات ،لطفا با پشتیبانی تماس بگیرید </string>
    <string name="msgErrorFullCapacityDomestic">ظرفیت برای ثبت مسافر تکمیل شد</string>
    <string name="msgErrorReserveFlight">خطا در رزرو پرواز،مجدد تلاش کنید</string>
    <string name="msgErrorFullCapacityFlight">ظرفیت پرواز تکمیل شده است </string>
    <string name="msgErrorCheckInfoPassenger">لطفا اطلاعات وارد شده را با کارت ملی یا پاسسپورت مسافر مقایسه کنید ، در صورت وجود هرگونه اشکال مسئولیت آن به عهده مسافر میباشد</string>
    <string name="msgErrorNoCapacity">اطلاعات بار برای این  پرواز وجود ندارد ،</string>
     <string name="msgErrorNoRules">قوانین این  پرواز وجود ندارد .</string>
    <string name="msgErrorExistPassenger">مسافر با این کد ملی قبلا اضافه کرده اید </string>
    <string name="msgErrorCheckInfoPassportPassenger">لطفا اطلاعات وارد شده را با پاسپورت مسافر مقایسه کنید ، در صورت وجود هرگونه اشکال مسئولیت آن به عهده مسافر میباشد</string>
    <string name="msgErrorRegister">خطا در ثبت اطلاعات ، لطفا با پشتیبانی تماس بگیرید</string>


    <string name="addCountPassenger">تعداد مسافر </string>

    <string name="showCaseFromPlace">ابتدا باید مسیر مبدا را انتخاب کنید</string>
    <string name="showCaseToPlace">مسیر مقصد را انتخاب کنید</string>
    <string name="showAllFlights">نمایش همه پروازها</string>


    <string name="searchingFlightInternational">در حال جستجو پرواز خارجی بین 900 ایرلاین </string>
    <string name="error">خطا</string>
    <string name="tryAgain">تلاش مجدد</string>
    <string name="tryAgainSearch">دوباره سرچ کنم</string>
    <string name="flyingFrom">مبدا را انتخاب کنید</string>
    <string name="flyingTo">مقصد را انتخاب کنید</string>
    <string name="country">کشور</string>
    <string name="busyPlace">مسیرهای پرتردد</string>
    <string name="allPlace">همه ی مسیرها</string>
    <string name="ruleTitleFlight">مسافر محترم لطفا به نکات زیر توجه بفرمایید:</string>
    <string name="searchingFlightDomestic">در حال جستجو پرواز داخلی...</string>


    <string name="rulePassport1">توجه ! این سیستم امکان تهیه بلیط هواپیما در تمام دنیا را برای مسافران محترم فراهم آورده است؛ اعتبار بلیط صادره را تضمین نموده و از سوی دیگر بررسی صحت مدارک لازمه سفر جهت ورود به کشور مقصد و یا نقطه میانی از قبیل دارا بودن بلیط دوطرفه، واچر هتل، انواع ویزا و سایر مدارک و فرم های مورد نیاز و محدودیت های گمرکی، ارزی و ... به عهده مسافر می باشد.</string>
    <string name="rulePassport2">2-داشتن ویزای معتبر کشور(های)مقصد(بین راهی) الزامی است</string>
    <string name="rulePassport3">بدیهی است در صورت عدم کنترا موارد بالا هیچ گونه وجهی بازگردانده نخواهد شد.</string>
    <string name="warningPassenger">اطلاعات مسافر با پاسپورت دقیقا یکی باشد</string>
    <string name="editPassenger">ویرایش مسافر</string>
    <string name="registerPassenger">ثبت مسافر</string>
    <string name="dateOfIssueOfThePassport">تاریخ صدور پاسپورت</string>
    <string name="callSupport">لطفا با پشتیبانی تماس بگیرید</string>

    <string name="male">مرد</string>
    <string name="female">زن</string>
    <string name="accept_">تایید میکنم</string>
    <string name="reservering">در حال رزرو پرواز</string>
    <string name="gettingInfo">درحال دریافت اطلاعات</string>
    <string name="contactSupport">ارتباط با پشتیبانی</string>
    <string name="exportingCountry">کشور صادر کننده</string>
    <string name="gender">جنسیت</string>
    <string name="lName">نام خانوادگی(انگلیسی)</string>
    <string name="fName">نام(انگلیسی)</string>
    <string name="passportDate">تاریخ انقضا پاسپورت</string>
    <string name="flightReturn">پرواز برگشت</string>
    <string name="flightWent">پرواز رفت</string>
    <string name="flightStops">زمان توقف</string>
    <string name="flightDuration">مدت پرواز</string>
    <string name="stops">توقف</string>

    <string name="details">جزییات</string>
    <string name="pAdults">مسافر بزرگسال</string>
    <string name="pChildren">مسافر کودک</string>
    <string name="pInfant">مسافر نوزاد</string>
    <string name="capacity">بار</string>
    <string name="rules">قوانین</string>

    <string name="flightNumber">شماره پرواز</string>

    <string name="checkInfoFlight">مسافر محترم:لطفا از قبل پرداخت ، از صحت اطلاعات پرواز مطمئن شوید.</string>
    <string name="dearPassenger">مسافر محترم</string>
    <string name="IRealized">متوجه شدم</string>

    <string name="validateSelectRoutingWentFlight">کدوم پرواز رو انتخاب میکنید؟</string>
    <string name="validateErrorNationalityCountry">تابعیت کشور را با دقت انتخاب کنید</string>
    <string name="validateErrorExportingCountry"> کشور صادرکننده را با دقت انتخاب کنید</string>
    <string name="validateFirstName">نام را لاتین وارد کنید</string>
    <string name="validateLastName"> نام خانوادگی را لاتین وارد کنید</string>
    <string name="validatePassportExpDate">تاریخ انقضا پاسپورت را وارد کنید</string>
    <string name="validateErrorDate">تاریخ حرکت را انتخاب کنید</string>

    <string name="toPlace">مقصد</string>
    <string name="fromPlace">مبدا</string>
    <string name="fromDate">تاریخ رفت</string>
    <string name="toDate">تاریخ برگشت</string>

    <array name="sortDomesticFlight">
        <item>قیمت</item>
        <item>زمان حرکت</item>
        <item>ایرلاین</item>
        <item>ظرفیت</item>
    </array>

    <array name="sortInternationalFlight">
        <item>قیمت</item>
        <item>زمان حرکت</item>
    </array>

    <string name="timeTakeOffWent">ساعت حرکت(رفت)</string>
    <string name="timeTakeOffReturn">ساعت حرکت(برگشت)</string>
</resources>
