<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="10dp"
    android:paddingBottom="10dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_margin="20dp"
        android:gravity="right"
        android:text="@string/gender"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />


    <TextView
        android:id="@+id/txtMale"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_marginRight="40dp"
        android:backgroundTint="@android:color/white"
        android:text="@string/male"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

    <TextView
        android:id="@+id/txtFemale"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_marginBottom="20dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@android:color/white"
        android:text="@string/female"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />
</LinearLayout>
