<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:layoutDirection="ltr"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_margin="10dp"
        android:drawableRight="@mipmap/ic_warning"
        android:gravity="right|center"
        android:text="@string/ruleTitleFlight"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
        android:textColor="@color/redMaster" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_margin="15dp"
        android:gravity="right"
        android:text="@string/rulePassport1"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
        android:textColor="@android:color/black" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_margin="15dp"
        android:gravity="right"
        android:text="@string/rulePassport3"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
        android:textColor="@color/redMaster" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="5dp"
        android:gravity="right"
        android:orientation="horizontal">


        <Button
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bg_border_gray"
            android:text="@string/nevermind"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />

        <Button
            android:id="@+id/btnAcceptRules"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bg_button_orange"
            android:text="@string/accept_"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            android:textColor="@android:color/white" />
    </LinearLayout>
</LinearLayout>